<resources>
    <string name="app_name">Pick Me</string>
    <string name="success">success</string>
    <string name="user_name">User Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="title_profile">Profile</string>
    <string name="infoString">Biograghy Info</string>
    <string name="CarModelString">Model</string>
    <string name="CarColorString">Color</string>
    <string name="RateString">User Rate</string>
    <string name="dobString">DOB</string>
    <string name="TripsString">Last Trips</string>
    <string name="title_edit_profile">Edit Profile</string>
    <string name="title_search_users">Find User</string>
    <string name="search_by_username">Search By Username</string>
    <string name="first_name">First Name</string>
    <string name="last_name1">Last Name</string>
    <string name="age">Age</string>
    <string name="add_car_photo">add your car photo</string>
    <string name="model">Model</string>
    <string name="plate_numer">Plate Number</string>
    <string name="car_year">Year</string>
    <string name="select_brand">select brand</string>
    <string name="Do_you_have_acar">Do you have a car</string>
    <string name="bio_hint">Biograghic info</string>
    <string name="phone_hint_post">(11) 4761 1986</string>
    <string name="phone_hint_pre">+20</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="transition_user_list_to_profile">transitionUserListToProfile</string>
    <string name="transition_user_list_to_profile_picture">transitionUserListToProfilePicture</string>
    <string name="transition_user_list_to_profile_name">transitionUserListToProfileName</string>
    <string name="transition_fab_to_edit">transitionFabToEdit</string>
    <string name="title_messages">Messages</string>
    <string name="title_create_community">Create a Community</string>
    <string name="create">Create</string>
    <string name="title_communities">Communities</string>
    <string name="message_hint">Write a message...</string>
    <string name="transition_recentChat_list_to_chat">transitionRecentChatListToChat</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_communities">My Communities</string>
    <string name="join">Join</string>
    <string name="joined">Joined</string>
    <string name="search_community">Search Communities</string>
    <string name="title_request_to_join">Join Request</string>
    <string name="send">Send</string>
    <string name="comm_name">Community Name</string>
    <string name="description">Description</string>
    <string name="creating_community">Creating Community</string>
    <string name="write_a_post">Write a Post</string>
    <string name="title_new_post">New Post</string>
    <string name="post">Post</string>
    <string name="posting">Posting</string>
    <string name="sent">Sent</string>


    <string name="post_ride">Post a Ride</string>
    <string name="select_source">Select Source</string>
    <string name="select_destination">Select Destination</string>
    <string name="next">NEXT</string>
    <string name="submit">SUBMIT</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="select">SELECT</string>
    <string name="to_all">All</string>
    <string name="only_these_communities">Only These Communities</string>
    <string name="title_my_rides">My Rides</string>
    <string name="car">Car</string>
    <string name="search_ride">Search For a Ride</string>
    <string name="communities">Communities</string>
    <string name="searching">Searching...</string>
    <string name="number_of_seats">Number Of Seats</string>
    <string name="free_seats">Free Seats</string>
    <string name="no_smoking">No Smoking</string>
    <string name="ladies_only">Ladies Only</string>
    <string name="notes">Notes</string>
    <string name="details">Details</string>
    <string name="optional">Optional</string>
    <string name="driver">Driver</string>
    <string name="free_seat">Free Seat</string>
    <string name="request_to_join">Request TO Join</string>
    <string name="title_search_result">Search Results</string>
    <string name="message">Message To Driver</string>
    <string name="request">SEND</string>
    <string name="request_sent">Request Sent</string>
    <string name="sending">Sending</string>
    <string name="leave_message_for_driver">Leave a message for the driver</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="no_description_added">No Description Added</string>
    <string name="make_admin">MAKE ADMIN</string>
    <string name="admin">Admin</string>
    <string name="or">OR</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_facebook">Sign In with Facebook</string>
    <string name="sign_google">SIgn In with Google</string>
    <string name="title_activity_send_location_fragment">SendLocationFragment</string>
    <string name="rateTheCar">Rate The Car</string>
    <string name="what_difference">what was different</string>
    <string name="if_no">If No...</string>
    <string name="was_it_the_same">was it the same as described in the ride details ?</string>
    <string name="driving">Driving</string>
    <string name="passenger">Rate this passenger</string>
    <string name="writeComment">Write a comment</string>
    <string name="feedback">Feedback</string>
    <string name="gcm_defaultSenderId">244963852946</string>
    <string name="no_rides_found">No Rides Found</string>
    <string name="send_your_request">Send your request</string>
    <string name="search_for_location">Search for location</string>
    <string name="action_share">Share</string>
    <string name="contact_mail">pickemegradproject@gmail.com</string>
    <string name="search">Search</string>
    <string name="sent_a_location">sent a location</string>
    <string name="sign_in_linked_in">Sign In with LinkedIn</string>
    <string name="punctuation">Punctuality</string>
    <string name="attitude">Attitude</string>
    <string name="comment">Comment</string>
    <string name="same_car">Same car as described ?</string>
    <string name="crowded">Crowded</string>
    <string name="heavy">Heavy</string>
    <string name="light">Light</string>
    <string name="rough">Rough</string>
    <string name="smooth">Smooth</string>
    <string name="traffic">Traffic</string>
    <string name="road">Road</string>
    <string name="view_feedback">View Feedback</string>
    <string name="from">From</string>
    <string name="notifications">Notifications</string>
    <string name="make_an_announcment">Make an Announcement</string>
    <string name="announcment">Announcement</string>
    <string name="disabled_welcomed">Disabled Welcomed</string>
    <string name="bio">Bio</string>
    <string name="publicCommunities">Public</string>


</resources>
