<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context="com.asu.pick_me_graduation_project.fragment.ChooseRouteFragment">

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right">
    </RadioGroup>

    <android.support.v7.widget.CardView
        android:id="@+id/cardViewPlacesAutocomplete"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="4dp"
        android:clickable="true"
        android:elevation="4dp"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:padding="4dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_search_black_24dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/search_for_location"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>


    <com.asu.pick_me_graduation_project.view.GenericMapsView
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>


    <android.support.v7.widget.CardView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        app:cardElevation="4dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <LinearLayout
                android:id="@+id/layoutSelectSource"
                android:layout_width="match_parent"
                android:layout_height="?attr/listPreferredItemHeight"
                android:background="?attr/selectableItemBackground"
                android:orientation="horizontal"
                android:padding="4dp">

                <TextView
                    android:id="@+id/textViewSelectSource"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/select_source"/>

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/imageViewCheckSource"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right|center_vertical"
                        android:src="@drawable/ic_check_grey"/>

                </FrameLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey2"
                />


            <LinearLayout
                android:id="@+id/layoutSelectDestination"
                android:layout_width="match_parent"
                android:layout_height="?attr/listPreferredItemHeight"
                android:background="?attr/selectableItemBackground"
                android:orientation="horizontal"
                android:padding="4dp">

                <TextView
                    android:id="@+id/textViewSelectDestination"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/select_destination"/>

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/imageViewCheckDestination"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right|center_vertical"
                        android:src="@drawable/ic_check_grey"/>

                </FrameLayout>
            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>


</LinearLayout>
