<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="10dp"
    android:paddingRight="100dp"
    android:paddingTop="2dp"
    android:paddingBottom="6dp"
    android:clipToPadding="false"
    >

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:minHeight="48dp"
        app:cardCornerRadius="8dp"
        app:cardBackgroundColor="#FFE082"
        app:cardElevation="4dp">

        <com.asu.pick_me_graduation_project.view.GenericMapsView
            android:id="@+id/genericMapsView"
            android:layout_width="match_parent"
            android:layout_height="200dp"/>
    </android.support.v7.widget.CardView>

</FrameLayout>