...
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/buttonPostRide"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:clickable="true"
                android:elevation="4dp"
                android:focusable="true"
...
